resized pagebody img correctly on smaller view

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -78,7 +78,8 @@
   .header-icons {
     justify-content: space-evenly;
     margin-left: 15px;
-    margin-right: 15px;    
+    margin-right: 15px;
+    margin-top: 5px;    
   }
   .header-link {
     padding: 5px;
